--- a/files/home.html
+++ b/files/home.html
@@ -12,7 +12,8 @@
         </form>
          
          <div>
-             {{data1}}
+             Birthday : {{year}} {{month}} {{day}} <br>
+             Gender   : {{gender}}
          </div>
      </div>
 
